Mejora de organización

--- a/Planes.html
+++ b/Planes.html
@@ -2119,6 +2119,6 @@
             return true;
         });
     </script>
-    <script src="index_script.js"></script>
+    <script src="js/index_script.js"></script>
 </body>
 </html>
