--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MACRO GYM - Calculadora de IMC</title>
     <link rel="icon" type="image/png" href="img/logo_icono.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -2978,7 +2978,7 @@
             }
         });
     </script>
-    <script src="index_script.js"></script>
+    <script src="js/index_script.js"></script>
     <!-- Este código debe agregarse al final del archivo HTML, justo antes del cierre de </body> -->
 <script>
     // Script para corregir problemas de visualización en móviles
