--- a/clientes.html
+++ b/clientes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MACRO GYM - Registro de Clientes</title>
     <link rel="icon" type="image/png" href="img/logo_icono.png">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="styles/style1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -618,7 +618,7 @@
             }
         });
     </script>
-<script src="validacion-formularios.js"></script>
+<script src="js/validacion-formularios.js"></script>
 </body>
 </html>
 
