--- a/inscripcion.html
+++ b/inscripcion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MACRO GYM - Inscripción</title>
     <link rel="icon" type="image/png" href="img/logo_icono.png">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="styles/style1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -191,13 +191,13 @@
                 
                 <form id="inscripcionForm" class="inscripcion-form">
                     <!-- Ejemplo de cómo debe estructurarse cada campo -->
-<div class="form-group">
-    <label for="nombre">Nombre <span style="color: red;">*</span></label>
-    <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
-    <div class="form-icon">
-        <i class="fas fa-user"></i>
-    </div>
-</div>
+                    <div class="form-group">
+                        <label for="nombre">Nombre <span style="color: red;">*</span></label>
+                        <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
+                        <div class="form-icon">
+                            <i class="fas fa-user"></i>
+                        </div>
+                    </div>
                     
                     <div class="form-group">
                         <label for="apellido">Apellido <span style="color: red;">*</span></label>
@@ -460,7 +460,7 @@
             }
         });
     </script>
-<script src="validacion-formularios.js"></script>
+<script src="js/validacion-formularios.js"></script>
 </body>
 </html>
 
