--- a/galeria.html
+++ b/galeria.html
@@ -2229,6 +2229,6 @@
             });
         });
     </script>
-    <script src="index_script.js"></script>
+    <script src="js/index_script.js"></script>
 </body>
 </html>
